# Plotter

./: ARCHITECTURE_FIX_SQLITE_HARDCODING.md  build-backend.sh  build-cli.sh  build-filesystem-datasource.sh
PlotterDTOs/: CMakeLists.txt  README.md
PlotterDTOs/include/: BaseDTOs.h  EntityStubs.h  PlotterConfig.h
PlotterDTOs/include/plotter_repositories/: FolderDataSource.h  NoteDataSource.h
PlotterDataSourceRouter/: CMakeLists.txt
PlotterDataSourceRouter/include/plotter_datasource_router/: SimpleDataSourceRouter.h
PlotterEntities/: .gitignore  CMakeLists.txt  Doxyfile  README.md
PlotterEntities/docs/html/: _a_p_i___d_o_c_u_m_e_n_t_a_t_i_o_n_8md.html  _folder_8h.html  _folder_8h.js  _folder_8h_source.html  _note_8h.html  _note_8h.js  _note_8h_source.html  _project_8h.html  _project_8h.js  _project_8h_source.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_folder-members.html  class_folder.html  class_folder.js  class_note-members.html  class_note.html  class_note.js  class_project-members.html  class_project.html  class_project.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen.css  doxygen_crawl.html  files.html  functions.html  functions_func.html  index.html  index.js  md__r_e_a_d_m_e.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html
PlotterEntities/docs/html/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  files_0.js  (+27 more)
PlotterEntities/examples/: CMakeLists.txt  library_usage.cpp
PlotterEntities/include/: FileItem.h  FileSystemNoteStorage.h  Folder.h  Note.h  NoteStorage.h  Project.h
PlotterEntities/src/: FileItem.cpp  FileSystemNoteStorage.cpp  Folder.cpp  Note.cpp  Project.cpp  main.cpp
PlotterEntities/tests/: CMakeLists.txt  test_entities.cpp
PlotterFilesystemDTOs/: CMakeLists.txt  README.md
PlotterFilesystemDTOs/include/plotter_filesystem_dtos/: FilesystemDTOs.h
PlotterFilesystemDTOs/src/: FilesystemDTOUtils.cpp
PlotterFilesystemDTOs/tests/: test_filesystem_dtos.cpp
PlotterFilesystemDataSource/: CMakeLists.txt  README.md
PlotterFilesystemDataSource/include/plotter_filesystem/: FilesystemDataSource.h
PlotterFilesystemDataSource/src/: FilesystemFolderDataSource.cpp  FilesystemNoteDataSource.cpp  FilesystemNoteStorage.cpp  FilesystemProjectDataSource.cpp
PlotterFilesystemDataSource/tests/: CMakeLists.txt  test_datasource.cpp
PlotterFilesystemMappers/: CMakeLists.txt  README.md
PlotterFilesystemMappers/include/plotter_filesystem_mappers/: FilesystemMappers.h
PlotterFilesystemMappers/src/: FilesystemFolderMapper.cpp  FilesystemNoteMapper.cpp  FilesystemProjectMapper.cpp
PlotterFilesystemMappers/tests/: CMakeLists.txt  test_mappers.cpp
PlotterLogger/: CMakeLists.txt  README.md
PlotterLogger/include/: ConsoleLogger.h  Logger.h
PlotterLogger/src/: ConsoleLogger.cpp
PlotterRepositories/: CMakeLists.txt  README.md
PlotterRepositories/examples/: CMakeLists.txt  demo_multi_source.cpp  simple_demo.cpp
PlotterRepositories/include/plotter_repositories/: DTOMapper.h  DataSource.h  DataSourceRouter.h  EntityDTOMapper.h  EntityMappers.h  FolderDataSource.h  MultiSourceFolderRepository.h  MultiSourceNoteRepository.h  MultiSourceProjectRepository.h  NoteDataSource.h  PlotterRepositories.h  ProjectDataSource.h  RepositoryFactory.h  RoutingStrategy.h
PlotterRepositories/tests/: CMakeLists.txt  test_repository.cpp
PlotterRepositories/tests/mocks/: MockDataSourceRouter.h  MockFolderDataSource.h  MockNoteDataSource.h  MockProjectDataSource.h  MockRoutingStrategies.h  README.md
PlotterSqliteDTOs/: CMakeLists.txt  README.md
PlotterSqliteDTOs/include/plotter_sqlite_dtos/: SqliteDTOs.h
PlotterSqliteDTOs/src/: SqliteDTOUtils.cpp
PlotterSqliteDTOs/tests/: CMakeLists.txt  test_sqlite_dtos.cpp
PlotterSqliteDataSource/: CMakeLists.txt  README.md  build.sh
PlotterSqliteDataSource/examples/: CMakeLists.txt  sqlite_demo.cpp
PlotterSqliteDataSource/include/: PlotterSqlite.h
PlotterSqliteDataSource/include/plotter_sqlite/: SqliteDatabase.h  SqliteFolderDataSource.h  SqliteNoteDataSource.h  SqliteProjectDataSource.h
PlotterSqliteDataSource/src/: SqliteDatabase.cpp  SqliteFolderDataSource.cpp  SqliteNoteDataSource.cpp  SqliteProjectDataSource.cpp
PlotterSqliteDataSource/tests/: CMakeLists.txt  test_datasource.cpp
PlotterSqliteMappers/: CMakeLists.txt  README.md
PlotterSqliteMappers/include/plotter_sqlite_mappers/: SqliteMappers.h
PlotterSqliteMappers/src/: SqliteFolderMapper.cpp  SqliteNoteMapper.cpp  SqliteProjectMapper.cpp
PlotterSqliteMappers/tests/: CMakeLists.txt  test_mappers.cpp
PlotterUseCases/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  REPOSITORY_LIBRARY_GUIDE.md  ROBUST_ERROR_HANDLING.md
PlotterUseCases/examples/: CMakeLists.txt  demo_application.cpp  robust_demo.cpp
PlotterUseCases/include/repositories/: FolderRepository.h  NoteRepository.h  ProjectRepository.h
PlotterUseCases/include/usecases/: BaseUseCase.h  CreateFolderUseCase.h  CreateNoteUseCase.h  CreateProjectUseCase.h  DeleteProjectUseCase.h  GetNoteContentUseCase.h  GetProjectUseCase.h  ListProjectsUseCase.h  MoveFolderUseCase.h  MoveNoteUseCase.h  UseCaseCommon.h
PlotterUseCases/src/usecases/: CreateFolderUseCase.cpp  CreateNoteUseCase.cpp  CreateProjectUseCase.cpp  DeleteProjectUseCase.cpp  GetNoteContentUseCase.cpp  GetProjectUseCase.cpp  ListProjectsUseCase.cpp  MoveFolderUseCase.cpp  MoveNoteUseCase.cpp
PlotterUseCases/tests/: test_create_folder_usecase.cpp  test_create_note_usecase.cpp  test_create_project_usecase.cpp  test_delete_project_usecase.cpp  test_get_project_usecase.cpp  test_list_projects_usecase.cpp  test_move_folder_usecase.cpp  test_move_note_usecase.cpp
PlotterUseCases/tests/mocks/: InMemoryFolderRepository.cpp  InMemoryFolderRepository.h  InMemoryNoteRepository.cpp  InMemoryNoteRepository.h  InMemoryProjectRepository.cpp  InMemoryProjectRepository.h
(+128 files in other folders)
